fix the alignment in rent page

--- a/src/component/common/Header/style.css
+++ b/src/component/common/Header/style.css
@@ -19,7 +19,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  width: 90%;
+  width: 92%;
   max-width: 1440px;
   height: clamp(3.5rem, 8vh, 5.6rem);
   margin: auto;
