--- a/src/pages/Rent/components/banner/style.css
+++ b/src/pages/Rent/components/banner/style.css
@@ -1,4 +1,4 @@
-.banner-container{
+ner{
     width: 100%;
     height: 160px;
     background: #2A3A68;
@@ -7,22 +7,30 @@
     padding-left: 43px;
     margin-block: 20px;
 }
+.banner-container{
+ 
+ 
+    background-color: #2A3A68;
+    border-radius: 12px;
+    padding-top: 35px;
+    padding-left: 43px;}
 
-
+/* 
 
 .banner-details{
     width: 50%;
     display: flex;
     flex-direction: column;
     gap: 16px;
-}
+} */
 
 .banner-details > h1{
 font-family: "Poppins";
 font-weight: 600;
-font-size: 32px;
+font-size: 36px;
 line-height: 20px;
 color: #fff;
+padding-bottom: 9px;
 }
 
 .banner-details > p{
@@ -34,13 +42,13 @@ color: #fff;
 white-space: nowrap;       
 overflow: hidden;          
 text-overflow: ellipsis;    
-width: 75%;
+padding-bottom: 100px;
 }
 
 
 
 @media (max-width: 1024px) and (min-width: 768px) {
-    .banner-container {
+    ner {
         width: 100%;
         height: auto;  /* Auto height for flexible layout */
         padding: 25px;
@@ -66,7 +74,7 @@ width: 75%;
 
 /* Mobile View (max 767px) */
 @media (max-width: 767px) {
-    .banner-container {
+    ner {
         width: 100%;
         height: auto;
         padding: 20px;
